--- a/styles/chart_zone.scss
+++ b/styles/chart_zone.scss
@@ -72,7 +72,7 @@
 
     &__bottom {
         margin-top: 30px;
-        background-image: url('images/horse.png');
+        background-image: url('../images/horse.png');
         background-repeat: no-repeat;
         background-position: left;
         padding-left: 28.5%;
