--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@
 }
 .chart-zone__bottom {
   margin-top: 30px;
-  background-image: url("images/horse.png");
+  background-image: url("../images/horse.png");
   background-repeat: no-repeat;
   background-position: left;
   padding-left: 28.5%;
