--- a/styles/chart_zone.scss
+++ b/styles/chart_zone.scss
@@ -81,6 +81,10 @@
         display: flex; 
         background-size: contain; 
     }
+
+    &__mobile-horse {
+        display: none;
+    }
 }
 
 @media(max-width: 900px) {
@@ -124,6 +128,15 @@
             top: 0;
             right: 0;
             margin-bottom: 10px;
+        }
+
+        &__bottom {
+            padding: 0;
+        }
+
+        &__mobile-horse {
+            display: block;
+            margin: 30px auto;
         }
     }
 }
