--- a/styles/chart_zone.scss
+++ b/styles/chart_zone.scss
@@ -137,6 +137,7 @@
         &__mobile-horse {
             display: block;
             margin: 30px auto;
+            width: 100%;
         }
     }
 }
