--- a/styles/chart_zone.scss
+++ b/styles/chart_zone.scss
@@ -139,5 +139,9 @@
             margin: 30px auto;
             width: 100%;
         }
+
+        &__main {
+            padding: 5px;
+        }
     }
 }
