--- a/styles/chart_zone.scss
+++ b/styles/chart_zone.scss
@@ -137,11 +137,11 @@
         &__mobile-horse {
             display: block;
             margin: 30px auto;
-            width: 100%;
+            width: 60%;
         }
 
         &__main {
-            padding: 5px;
+            padding: 0;
         }
     }
 }
