--- a/styles/style.css
+++ b/styles/style.css
@@ -203,10 +203,10 @@
   .chart-zone__mobile-horse {
     display: block;
     margin: 30px auto;
-    width: 100%;
+    width: 60%;
   }
   .chart-zone__main {
-    padding: 5px;
+    padding: 0;
   }
 }
 body {
